# TREC-Artifact

./: .clangd  .gitignore  CMakeLists.txt  H8_L_summary_results.csv  H8_L_training_results.csv  H8_training_log_L10.txt  H8_training_log_L16.txt  H8_training_log_L20.txt  H8_training_log_L25.txt  H8_training_log_L26.txt  H8_training_log_L3.txt  H8_training_log_L30.txt  H8_training_log_L32.txt  H8_training_log_L7.txt  L_performance_results.csv  L_summary_results.csv  L_training_results.csv  Makefile  README.md  Readme.md  analyze_L_correlation.py  analyze_squeeze_results.py  calc_param_L.py  common.py  compare_L_values.py  conv_layer.py  environment.yml  inst_nvtx.cpp  old_L_training_results.csv  parse_timing.py  plot_L_results.py  prof.cpp  profile.stats  requirements.txt  run_a_layer.py  run_squeeze_L7.sh  save_tensor.py  setup.py  squeeze_L_summary_results.csv  squeeze_L_training_results.csv  (+57 more)
.github/workflows/: ci.yml
EXP_L1/CifarNet-20241201-213148/: log.txt  weights.pt  weights_100.pt
EXP_L1/CifarNet-20241202-001310/: log.txt  weights.pt
EXP_L10/CifarNet-20241201-222341/: log.txt  weights.pt  weights_100.pt
EXP_L10/CifarNet-20241202-003254/: log.txt  weights.pt  weights_100.pt
EXP_L10/CifarNet-20241202-003748/: log.txt
EXP_L11/CifarNet-20241201-222732/: log.txt  weights.pt  weights_100.pt
EXP_L12/CifarNet-20241201-223124/: log.txt  weights.pt  weights_100.pt
EXP_L13/CifarNet-20241201-223514/: log.txt  weights.pt  weights_100.pt
EXP_L14/CifarNet-20241201-223858/: log.txt  weights.pt  weights_100.pt
EXP_L15/CifarNet-20241201-224249/: log.txt  weights.pt  weights_100.pt
EXP_L16/CifarNet-20241201-211719/: log.txt  weights.pt  weights_100.pt
EXP_L16/CifarNet-20241201-224625/: log.txt  weights.pt  weights_100.pt
EXP_L16/CifarNet-20241202-003704/: log.txt  weights.pt  weights_100.pt
EXP_L17/CifarNet-20241201-225001/: log.txt  weights.pt  weights_100.pt
EXP_L18/CifarNet-20241201-225332/: log.txt  weights.pt  weights_100.pt
EXP_L19/CifarNet-20241201-225652/: log.txt  weights.pt  weights_100.pt
EXP_L2/CifarNet-20241201-214612/: log.txt  weights.pt  weights_100.pt
EXP_L20/CifarNet-20241201-230018/: log.txt  weights.pt  weights_100.pt
EXP_L20/CifarNet-20241202-004033/: log.txt  weights.pt  weights_100.pt
EXP_L21/CifarNet-20241201-230346/: log.txt  weights.pt  weights_100.pt
EXP_L22/CifarNet-20241201-230716/: log.txt  weights.pt  weights_100.pt
EXP_L23/CifarNet-20241201-231033/: log.txt  weights.pt  weights_100.pt
EXP_L24/CifarNet-20241201-231359/: log.txt  weights.pt  weights_100.pt
EXP_L25/CifarNet-20241201-231725/: log.txt  weights.pt  weights_100.pt
EXP_L25/CifarNet-20241202-004354/: log.txt  weights.pt  weights_100.pt
EXP_L26/CifarNet-20241201-232058/: log.txt  weights.pt  weights_100.pt
EXP_L26/CifarNet-20241202-010013/: log.txt  weights.pt  weights_100.pt
EXP_L27/CifarNet-20241201-232420/: log.txt  weights.pt  weights_100.pt
EXP_L28/CifarNet-20241201-232749/: log.txt  weights.pt  weights_100.pt
EXP_L29/CifarNet-20241201-233108/: log.txt  weights.pt  weights_100.pt
EXP_L3/CifarNet-20241201-215316/: log.txt  weights.pt  weights_100.pt
EXP_L3/CifarNet-20241202-005014/: log.txt  weights.pt  weights_100.pt
EXP_L30/CifarNet-20241201-233422/: log.txt  weights.pt  weights_100.pt
EXP_L30/CifarNet-20241202-010323/: log.txt  weights.pt  weights_100.pt
EXP_L31/CifarNet-20241201-233737/: log.txt  weights.pt  weights_100.pt
EXP_L32/CifarNet-20241201-212051/: log.txt  weights.pt  weights_100.pt
EXP_L32/CifarNet-20241201-234053/: log.txt  weights.pt  weights_100.pt
EXP_L32/CifarNet-20241202-004705/: log.txt  weights.pt  weights_100.pt
EXP_L4/CifarNet-20241201-210141/: log.txt  weights.pt
EXP_L4/CifarNet-20241201-210217/: log.txt  weights.pt  weights_100.pt
EXP_L4/CifarNet-20241201-210828/: log.txt  weights.pt  weights_100.pt
EXP_L4/CifarNet-20241201-215835/: log.txt  weights.pt  weights_100.pt
EXP_L4/ResNet18-20241201-205947/: log.txt
EXP_L4/ResNet18-20241201-210046/: log.txt
EXP_L5/CifarNet-20241201-220316/: log.txt  weights.pt  weights_100.pt
EXP_L6/CifarNet-20241201-220741/: log.txt  weights.pt  weights_100.pt
EXP_L7/CifarNet-20241201-221156/: log.txt  weights.pt  weights_100.pt
EXP_L7/CifarNet-20241202-005611/: log.txt  weights.pt  weights_100.pt
EXP_L8/CifarNet-20241201-211327/: log.txt  weights.pt  weights_100.pt
EXP_L8/CifarNet-20241201-221552/: log.txt  weights.pt  weights_100.pt
EXP_L9/CifarNet-20241201-221941/: log.txt  weights.pt  weights_100.pt
EXP_squeeze_L10/SqueezeNet-20241202-075412/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L16/SqueezeNet-20241202-081329/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L20/SqueezeNet-20241202-083221/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L25/SqueezeNet-20241202-085047/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L26/SqueezeNet-20241202-110440/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L3/SqueezeNet-20241202-071052/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L3/SqueezeNet-20241202-102032/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L30/SqueezeNet-20241202-112300/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L32/SqueezeNet-20241202-090851/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L36/SqueezeNet-20241202-114103/: log.txt  weights.pt  weights_100.pt  weights_50.pt
EXP_squeeze_L40/SqueezeNet-20241202-092656/: log.txt  weights.pt  weights_100.pt  weights_50.pt
examples/: .gitattributes  debug_row2im_layer_6.pt  eval_model.py  search_trec_params.py  train_autoencoder.py  train_model.py  utils.py
trec/: __init__.py  conv_layer.py
trec/csrc/: utils.h  (+1 more)
trec_classic/: __init__.py  conv_layer.py  setup.py
trec_op/: func_utilis.h
(+84 files in other folders)
